<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/edit_text_background">

    <TextView
        android:id="@+id/labelAddTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAddTrack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/inputTrackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputTrackName"
        app:layout_constraintTop_toBottomOf="@id/labelAddTrack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/inputTrackDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Duración (MM:SS)"
        app:layout_constraintTop_toBottomOf="@id/inputTrackName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputTrackDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonAddTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar"
            android:backgroundTint="@color/purple_700"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
