...
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/addTrackDescription"/>

            <!-- Album Name -->
            <TextView
                android:id="@+id/albumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/buttonAddTrack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
...
                android:layout_marginTop="16dp"
                android:text="@string/album_tracks"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tracksList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tracksLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scrollbars="vertical"
...
