<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingBottom="8dp"
    tools:context=".ui.album.AlbumCreateFragment">

    <!-- CardView para el formulario -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Campos de entrada -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre Álbum"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nombre del álbum"
                android:inputType="text"
                android:padding="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="URL de la portada"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/inputCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="URL de la portada"
                android:inputType="textUri"
                android:padding="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha de lanzamiento"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/inputReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Fecha (YYYY-MM-DD)"
                android:inputType="date"
                android:padding="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descripción"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descripción"
                android:inputType="textMultiLine"
                android:padding="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Género"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="8dp" />

            <Spinner
                android:id="@+id/spinnerGenre"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sello Discográfico"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="8dp" />

            <Spinner
                android:id="@+id/spinnerRecordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Botones de acción -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:paddingBottom="12dp"
        android:padding="12dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewForm">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="Cancelar" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="Crear"
            android:enabled="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
